--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#06B6D4" />
-    <meta name="description" content="KAYALSTAY - Find your perfect rental property across India" />
+    <meta name="description" content="Quickit - Find your perfect rental property across India" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/logo192.png" />
-    <title>KAYALSTAY - Find Your Perfect Stay</title>
+    <title>Quickit - Find Your Perfect Stay</title>
     <style>
       /* Mobile-first responsive design */
       @media (max-width: 768px) {
